去除废弃方法